Módulo de Gestión de Usuarios

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -73,7 +73,7 @@
 **Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos. / Los cambios en el perfil se reflejan en la interfaz de usuario.      
 **Activador:** El usuario selecciona la opción de editar perfil desde el panel de usuario.      
 
-### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal docente):**
+### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal administrativo):**
 
 **Descripción:** Proceso mediante el cual se asignan roles específicos a los usuarios y se gestionan los permisos asociados a cada rol.       
 **Actores:** Administradores, Usuarios.     
@@ -83,7 +83,7 @@
 
 ### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
 
-**Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido y gestionar sus sesiones activas.     
+**Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.     
 **Actores:** Usuarios (alumnos, profesores, personal docente).      
 **Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.      
 **Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.       
