--- a/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
@@ -1,3 +1,24 @@
 # 4.1 Disponibilidad
 
+Se debe asegurar la alta disponibilidad en la plataforma debido a su naturaleza, ya que los usuarios constatemente requieren del la posibilidad del envío y recepción del mensajes en tiempo real. Para esto, se implementarán sistemas de monitoreo para la detección y prevención de fallos.
+
+**Medida de respuesta esperada**
+- Disponibilidad del sistema: 99.9%
+- Downtime anual: 8.8 horas
+
+## Detección de Fallas
+- *Monitoreo* constante de la página web para identifación de potenciales fallos antes de originar la inactividad del sistema.
+- *Pruebas de sanidad* para comprobar la validez de las operaciones y salidas de los componentes. Resulta necesario para validar los mensajes enviados y las acciones realizadas por los administradores.
+- *Detección de excepciones* para comprobar que todas las partes del sistema funcionen tal y como fueron diseñadas y determinar de las condiciones que alteran su normal ejecución.
+## Recuperación de Fallas
+- *Redundancia Activa* debido a la alta necesidad de mantener funcionando a la página web, ante esto se translada el funcionamiento del nodo fallado a otro nodo que sí se encuentre operativo.
+- *Manejo de Excepciones* ya que esto mejorará la experiencia general del usuario al tener un conjunto de fallas ya consideradas y tener un plan de contingencia en caso de su aparación.
+- *Rollback* para revertir el estado del sistema hasta un punto en el que se encontraba estable. Esto resulta necesario ante la necesidad de implementar nuevas funcionalidades según la institución lo requiera.
+## Prevención de Fallas
+- *Pruebas de estres* para indentificar cuellos de botella al momento de la alta concurrencia de estudiantes.
+- *Modelos predictivos* en conjunto con sistemas de monitoreo permiten la toma de aciones cuando se detectan condiciones que conlleven a fallos.
+- *Remoción del servicio* en caso que el sistema tenga un error irrecuperable, se tendrá que notificar que el sistema no se encuentra disponible y entregar un tiempo de espera estimado.
+## Alta disponibilidad
+- Utilización de balanceadores de carga que permitan la derivación del flujo de usuario a los diferentes nodos del servidor en caso de momentos de alta concurrencia.
+
 [Regresar al índice](../../README.md)
