--- a/Partes del Indice/4. Tacticas/4.4 Rendimiento.md
+++ b/Partes del Indice/4. Tacticas/4.4 Rendimiento.md
@@ -1,3 +1,18 @@
 # 4.4 Rendimiento
 
+El rendimiento resulta vital en la página de chat, ya que el envío de mensajes o las acciones de moderación deben ser realizadas en tiempo real. Esto asegura una experiencia de usuario correcta. Además, los diferentes módulos deben trabajar de forma rápida y eficaz entre sí para contribuir en el correcto funcionamiento de la página.
+
+Para esto, se establencen las medidas de respuesta estimadas:
+
+* Tiempo de carga promedio: 3s
+* Tiempo de respuuesta promedio entre modulos: 180ms
+
+Y las tácticas para garantizar esto son las siguientes
+- **Controlar la Demanda de Recursos**:  
+    - *Eficiencia en el uso de recursos*, resulta vital en el gestión de los recursos que se tienen. Para esto debemos de hacer revisiones periódicas del código o de las funcionalidades que se tienen, para poder eliminar u optimizar funciones que demeriten el rendimiento.
+    - *Incrementar eficiencia en el uso de recursos*, se debe de optimizar los algoritmos que utilizamos en el proyecto, especialmente en áreas críticas de la página web para garantizar la menor latencia posible en su uso.
+- **Gestionar Recursos**:
+    - *Incrementar Recursos*, si se llega al límite en alguna funcionalidad en la cual resulta vital para el funcionamiento, será necesaria la adquisición de mejores componentes para esa área en particular y cubrir así su demanda.
+    - *Mantener múltiples copias de los datos*, si se logra mejorar el acceso a los datos en el almacenamiento se podrá optimizar el rendimiento al momento de acceder a esto (por ello se deben contar con los datos disponibles en almacenamientos con diferentes velocidades).
+
 [Regresar al índice](../../README.md)
