--- a/Partes del Indice/4. Tacticas/4.5 Seguridad.md
+++ b/Partes del Indice/4. Tacticas/4.5 Seguridad.md
@@ -1,3 +1,17 @@
 # 4.5 Seguridad
 
+La seguridad resulta un componente vital en la plataforma al incluirse en esta información de los estudiantes, profesores y personal administrativo de la universidad. Para esto, se incluyen las siguientes tácticas para evitar este tipo de incidentes.
+
+- **Detectar Ataques**:  
+    - *Detectar denegación de servicios*, resulta importante la limitación de conexiones por minuto de parte de un atacante. Además de esto, se deben de comparar los patrones de tráfico de información almacenada con ataques previos.
+    - *Detectar demora en mensajes*, se debe de identificar el cómo una demora de mensajes dentro de la aplicación puede interpretarse como una atque de Man in the middle, para esto se debe de analizar patrones de tiempo.
+- **Resistir Ataques**:  
+    - *Autenticar a los usuarios*, para esto se debe implementar la validación de dos factores a todo usuario que quiera ingresar a la plataforma.
+    - *Limitar los accesos*, se debe de controlar los accesos a los cuales tienen los usuarios, administradores y desarrolladores a las funcionalidades de la página web.
+- **Reaccionar a Ataques**:  
+    - *Encriptar los datos*, se debe tener este nivel adicional de seguridad al manejarse información privada de los usuarios, la cual se ve comprometida ante la interceptación de la BBDD.
+    - *Separar entidades*, debemos de contar con diferentes BBDD que se encuentren en diferentes redes, ademas de tener partes del sistema sin conexión, para así asegurar una mejor protección de la información.
+- **Recuperarse a Ataques**:
+    - *Copias de Seguridad*, se deben realizar copias de seguridad de forma periódica para la protección de la información de recursos clave y datos críticos para facilitar la recuperación en caso de un ataque exitoso.
+
 [Regresar al índice](../../README.md)
