--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -63,7 +63,7 @@
 ### **UCG1-Registro e inicio de sesión con roles definidos:**
 
 **Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
-**Actores:** Usuarios (alumnos, profesores, personal docente).  
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** Una cuenta de usuario previamente registrada, la aplicación debe estar conectada a un servicio de autenticación y base de datos.  
 **Postcondiciones:** El usuario tiene una cuenta creada y puede iniciar sesión en la aplicación, los datos del usuario están almacenados en la base de datos de forma segura.  
 **Activador:** El usuario selecciona la opción de registro en la pantalla de inicio.
@@ -71,7 +71,7 @@
 ### **UCG2-Perfiles de usuario:**
 
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
-**Actores:** Usuarios (alumnos, profesores, personal docente).  
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** El usuario debe estar autenticado en la aplicación.  
 **Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos. / Los cambios en el perfil se reflejan en la interfaz de usuario.  
 **Activador:** El usuario selecciona la opción de editar perfil desde el panel de usuario.
@@ -87,7 +87,7 @@
 ### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
 
 **Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.     
-**Actores:** Usuarios (alumnos, profesores, personal docente).      
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).      
 **Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.      
 **Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.       
 **Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.    
@@ -95,7 +95,7 @@
 ### **UCG5-Verificación de correo electrónico:**
 
 **Descripción:** Proceso mediante el cual el usuario verifica su dirección de correo electrónico para activar su cuenta.  
-**Actores:** Usuarios (alumnos, profesores, personal docente).  
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** El usuario debe haberse registrado en la aplicación. / El usuario debe proporcionar una dirección de correo electrónico válida.  
 **Postcondiciones:** La dirección de correo electrónico del usuario está verificada y la cuenta se activa. / El estado de verificación se actualiza en la base de datos.  
 **Activador:** El usuario recibe un correo electrónico con un enlace de verificación tras el registro.
@@ -103,7 +103,7 @@
 ### **UCG6-Panel de usuario para configuraciones personales:**
 
 **Descripción:** Un área dentro de la aplicación donde los usuarios pueden ajustar configuraciones personales y preferencias.  
-**Actores:** Usuarios (alumnos, profesores, personal docente).  
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** El usuario debe estar autenticado en la aplicación.  
 **Postcondiciones:** Las preferencias y configuraciones del usuario se guardan en la base de datos. / Los cambios se reflejan en la experiencia del usuario en la aplicación.  
 **Activador:** El usuario accede al panel de configuraciones personales desde su perfil.
