--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -20,7 +20,7 @@
 
 ### **UCC3-Anuncios y notificaciones:**
 
-**Descripción:** Los profesores y el personal administrativo podrán enviar anuncios y notificaciones importantes a los grupos de estudiantes o a toda la institución.  
+**Descripción:** Los profesores y el personal administrativo podrán enviar mensajes importantes a los grupos de estudiantes o a toda la institución.  
 **Actores:** Sistema, profesores y personal administrativo.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
 **Postcondiciones:** Los anuncios y notificaciones son enviados y recibidos por los estudiantes.  
