Requerimentos Funcionales.md
update Módulo de Administración y Moderación

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -102,13 +102,37 @@
 
 ## Módulo de Administración y Moderación
 
-### **UCA1-:**
+### **UCA1-Panel de administración para supervisar la actividad del chat:**
 
-**Descripción:**  
-**Actores:**  
-**Precondiciones:**  
-**Postcondiciones:**  
-**Activador:**
+**Descripción:** Este caso de uso describe la funcionalidad del panel de administración que permite a los administradores supervisar la actividad del chat en la aplicación.
+**Actores:** Administrador del sistema
+**Precondiciones:** El administrador ha iniciado sesión en el panel de administración. / La aplicación está en funcionamiento y los usuarios están activos en el chat.
+**Postcondiciones:** El administrador tiene una visión general de la actividad del chat. / Se pueden tomar acciones de moderación según sea necesario.
+**Activador:** El administrador accede al panel de administración para monitorear la actividad del chat.
+
+### **UCA2-Herramientas para moderación en eliminación de mensajes:**
+
+**Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores eliminen mensajes inapropiados o no deseados del chat.
+**Actores:** Administrador del sistema
+**Precondiciones:** El moderador ha iniciado sesión en el panel de administración. / Existe al menos un mensaje que requiere eliminación.
+**Postcondiciones:** El mensaje seleccionado ha sido eliminado del chat. / Los usuarios pertinentes son notificados sobre la eliminación del mensaje, si es necesario.
+**Activador:** El moderador identifica un mensaje inapropiado y decide eliminarlo del chat.
+
+### **UCA3-Herramientas para moderación para bloqueo de usuarios:**
+
+**Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores bloqueen a usuarios que están infringiendo las reglas del chat de manera persistente o grave.
+**Actores:** Administrador del sistema
+**Precondiciones:** El moderador ha iniciado sesión en el panel de administración. / El usuario objetivo ha sido identificado y se ha determinado que necesita ser bloqueado.
+**Postcondiciones:**  El usuario seleccionado ha sido bloqueado del chat y se le ha denegado el acceso. / El usuario bloqueado recibe una notificación sobre su bloqueo.
+**Activador:** El moderador determina que un usuario está violando las reglas del chat de manera reiterada y decide bloquearlo.
+
+### **UCA4-Herramientas para moderación de suspensión temporal de usuarios:**
+
+**Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores suspendan temporalmente a usuarios que están infringiendo las reglas del chat de manera temporal o moderada.
+**Actores:** Administrador del sistema
+**Precondiciones:** El moderador ha iniciado sesión en el panel de administración. / El usuario objetivo ha sido identificado y se ha determinado que necesita una suspensión temporal.
+**Postcondiciones:** El usuario seleccionado ha sido suspendido temporalmente del chat por un período definido. / El usuario suspendido recibe una notificación sobre su suspensión y los términos de la misma.
+**Activador:** El moderador determina que un usuario está violando las reglas del chat de manera moderada y decide suspenderlo temporalmente como medida disciplinaria.
 
 ## Módulo de Integraciones de Terceros
 
