--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -22,9 +22,12 @@
 
 ## Módulo de Administración y Moderación
 
-| Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                             | Respuesta       | Medida de Respuesta |
-| --------------- | ------- | --------------- | --------------- | --------------- | ------------------------------------- | --------------- | ------------------- |
-| _rellenar aquí_ | ESCA-01 | _rellenar aquí_ | _rellenar aquí_ | _rellenar aquí_ | Módulo de Administración y Moderación | _rellenar aquí_ | _rellenar aquí_     |
+| Atributo        | Código    | Entorno         | Fuente          | Estímulo        | Artefacto               | Respuesta                               | Medida de Respuesta                                                       |
+| --------------- | --------- | --------------- | --------------- | --------------- | ----------------------- | --------------------------------------- | ------------------------------------------------------------------------- |
+| Disponibilidad  | ESCA-01 | Sistema de administración y moderación del chat | Administradores | Ingreso de usuarios al sistema de administración, solicitudes de moderación de contenido, actualizaciones de estado del sistema | Sistema de administración y moderación del chat | El sistema debe permanecer accesible y funcional para los administradores en todo momento, incluso durante picos de actividad | Tiempo promedio de inactividad del sistema por día |
+| Seguridad       | ESCA-02 | Sistema de administración y moderación del chat | Administradores | Intentos de acceso no autorizado, ingreso de solicitudes de moderación, tráfico de red malicioso | Sistema de administración y moderación del chat, servidores de aplicaciones | El sistema debe proteger los datos confidenciales y garantizar que solo los usuarios autorizados tengan acceso solo a sus funciones | Número de intentos de acceso no autorizado bloqueados |
+| Usabilidad      | ESCA-03 | Interfaz de usuario del sistema de administración y moderación del chat | Administradores | Interacción de los administradores y moderadores con la interfaz de usuario para realizar tareas de moderación | Interfaz de usuario del sistema de administración y moderación del chat | El sistema debe proporcionar una interfaz intuitiva y fácil de usar que permita al administrador ser eficiente | Encuestas de satisfacción del usuario |
+| Mantenibilidad  | ESCA-04 | Sistema de administración y moderación del chat. | Equipo de desarrollo | Implementación de nuevas características, corrección de errores reportados, actualizaciones de seguridad |  Código fuente del sistema de administración y moderación del chat, documentación del sistema | El sistema debe ser fácil de mantener y actualizar, que facilite la comprensión y modificación de los desarrolladores | Número de errores introducidos durante modificaciones |
 
 ## Módulo de Integraciones de Terceros
 
