--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.5 Eleccion de Tecnologia.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.5 Eleccion de Tecnologia.md
@@ -1,3 +1,11 @@
 # 3.5 Elección de Tecnología
 
+React: Se eligió React para utilizarse como framework en el desarrollo de este proyecto, debido a su modernidad flexibilidad y alto uso en la industrias. Se decidio este framework despues de proponer otros framewoks como Angular o Vue.js. Despues de comparar, se optó React ya que varios de los desarrolladores tienen más experiencia con este framework. Ademas, de que la curva de aprendizaje de este es mucho menor comparado con Angular y que. Por ultimo, React permite implementar distintas librerias para mayor cantidad de funcionalidades dentro de la aplicación.
+
+PostgreSQL: Se escogió PostgreSQL como la base de datos de la aplicación, pues se requeria de una base de datos que mantenga la integridad de la informacion de la universidad que se transfiere. Se tuvieron otras propuestas como MongoDB, sin embargo, debido a su naturaleza no relacional, las consultas que se realizan serián más complejas.
+
+Node.js: Se decidio escoger Node.js como plataforma del backend debido a la experiencia del equipo de desarrollo con esta plataforma, ademas de que utiliza el modelo I/O no bloqueante, que permite multiples conexiones a la vez, lo que es muy útil para una aplicación como esta. Respecto a otras plataformas como Pythin o Ruby, se descartaron debido a su baja eficiencia comparada con la de Node.js.
+
+Express.js: Se escogió Express.js debido a su relacion con Node.js en su implementación, ademas de la simplicidad, flexibilidad y rendimiento que este tiene.
+
 [Regresar al índice](../../README.md)
