--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -11,33 +11,34 @@
 
 ## Módulo de Gestión de Usuarios
 
-| Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                             | Respuesta       | Medida de Respuesta |
-| --------------- | ------- | --------------- | --------------- | --------------- | ------------------------------------- | --------------- | ------------------- |
-| Registro e inicio de sesión con roles definidos | UCG-01  | Operaciones normales | Usuarios | Selección de opción de registro en pantalla de inicio | Página de Registro | Cuenta creada, sesión iniciada, datos almacenados de forma segura | Acceso a la aplicación con cuenta creada     |
-| Perfiles de usuario | UCG-02 | Operaciones normales | Usuarios | Selección de opción de editar perfil desde panel de usuario | Perfil de Usuario | Información de perfil actualizada en la base de datos e interfaz | Cambios reflejados inmediatamente     |
-| Asignación y gestión de roles y permisos | UCG-03 | Operación de datos | Administradores, Usuarios | Acceso al panel de administración y selección de gestión de roles | Sistema de Roles | Roles específicos asignados y permisos guardados en la base de datos | Roles y permisos actualizados correctamente     |
-| Recuperación de contraseñas y manejo de sesiones | UCG-04 | Inicios de sesión | Usuarios | Selección de "Olvidé mi contraseña" en pantalla de inicio de sesión | Sistema de Recuperación de Contraseñas | Enlace para restablecer contraseña, datos actualizados en base de datos | Contraseña restablecida, inicio de sesión     |
-| Verificación de correo electrónico | UCG-05 | Inicios de sesión | Usuarios | Recepción de correo con enlace de verificación tras registro | Sistema de Verificación de Correo | Correo verificado, cuenta activada, estado actualizado en base de datos | Cuenta activada tras verificación     |
-| Panel de usuario para configuraciones personales | UCG-06 | Mantenimiento de servicios | Usuarios | Acceso al panel de configuraciones personales desde perfil | Panel de Configuraciones | Preferencias guardadas en base de datos, reflejadas en la experiencia de usuario | Cambios aplicados y afectando experiencia     |
+| Atributo                                         | Código | Entorno                    | Fuente                    | Estímulo                                                            | Artefacto                              | Respuesta                                                                        | Medida de Respuesta                         |
+| ------------------------------------------------ | ------ | -------------------------- | ------------------------- | ------------------------------------------------------------------- | -------------------------------------- | -------------------------------------------------------------------------------- | ------------------------------------------- |
+| Registro e inicio de sesión con roles definidos  | UCG-01 | Operaciones normales       | Usuarios                  | Selección de opción de registro en pantalla de inicio               | Página de Registro                     | Cuenta creada, sesión iniciada, datos almacenados de forma segura                | Acceso a la aplicación con cuenta creada    |
+| Perfiles de usuario                              | UCG-02 | Operaciones normales       | Usuarios                  | Selección de opción de editar perfil desde panel de usuario         | Perfil de Usuario                      | Información de perfil actualizada en la base de datos e interfaz                 | Cambios reflejados inmediatamente           |
+| Asignación y gestión de roles y permisos         | UCG-03 | Operación de datos         | Administradores, Usuarios | Acceso al panel de administración y selección de gestión de roles   | Sistema de Roles                       | Roles específicos asignados y permisos guardados en la base de datos             | Roles y permisos actualizados correctamente |
+| Recuperación de contraseñas y manejo de sesiones | UCG-04 | Inicios de sesión          | Usuarios                  | Selección de "Olvidé mi contraseña" en pantalla de inicio de sesión | Sistema de Recuperación de Contraseñas | Enlace para restablecer contraseña, datos actualizados en base de datos          | Contraseña restablecida, inicio de sesión   |
+| Verificación de correo electrónico               | UCG-05 | Inicios de sesión          | Usuarios                  | Recepción de correo con enlace de verificación tras registro        | Sistema de Verificación de Correo      | Correo verificado, cuenta activada, estado actualizado en base de datos          | Cuenta activada tras verificación           |
+| Panel de usuario para configuraciones personales | UCG-06 | Mantenimiento de servicios | Usuarios                  | Acceso al panel de configuraciones personales desde perfil          | Panel de Configuraciones               | Preferencias guardadas en base de datos, reflejadas en la experiencia de usuario | Cambios aplicados y afectando experiencia   |
 
 ## Módulo de Administración y Moderación
 
-| Atributo        | Código    | Entorno         | Fuente          | Estímulo        | Artefacto               | Respuesta                               | Medida de Respuesta                                                       |
-| --------------- | --------- | --------------- | --------------- | --------------- | ----------------------- | --------------------------------------- | ------------------------------------------------------------------------- |
-| Disponibilidad  | ESCA-01 | Sistema de administración y moderación del chat | Administradores | Ingreso de usuarios al sistema de administración, solicitudes de moderación de contenido, actualizaciones de estado del sistema | Sistema de administración y moderación del chat | El sistema debe permanecer accesible y funcional para los administradores en todo momento, incluso durante picos de actividad | Tiempo promedio de inactividad del sistema por día |
-| Seguridad       | ESCA-02 | Sistema de administración y moderación del chat | Administradores | Intentos de acceso no autorizado, ingreso de solicitudes de moderación, tráfico de red malicioso | Sistema de administración y moderación del chat, servidores de aplicaciones | El sistema debe proteger los datos confidenciales y garantizar que solo los usuarios autorizados tengan acceso solo a sus funciones | Número de intentos de acceso no autorizado bloqueados |
-| Usabilidad      | ESCA-03 | Interfaz de usuario del sistema de administración y moderación del chat | Administradores | Interacción de los administradores y moderadores con la interfaz de usuario para realizar tareas de moderación | Interfaz de usuario del sistema de administración y moderación del chat | El sistema debe proporcionar una interfaz intuitiva y fácil de usar que permita al administrador ser eficiente | Encuestas de satisfacción del usuario |
-| Mantenibilidad  | ESCA-04 | Sistema de administración y moderación del chat. | Equipo de desarrollo | Implementación de nuevas características, corrección de errores reportados, actualizaciones de seguridad |  Código fuente del sistema de administración y moderación del chat, documentación del sistema | El sistema debe ser fácil de mantener y actualizar, que facilite la comprensión y modificación de los desarrolladores | Número de errores introducidos durante modificaciones |
+| Atributo       | Código  | Entorno                                                                 | Fuente               | Estímulo                                                                                                                        | Artefacto                                                                                    | Respuesta                                                                                                                           | Medida de Respuesta                                   |
+| -------------- | ------- | ----------------------------------------------------------------------- | -------------------- | ------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------- |
+| Disponibilidad | ESCA-01 | Sistema de administración y moderación del chat                         | Administradores      | Ingreso de usuarios al sistema de administración, solicitudes de moderación de contenido, actualizaciones de estado del sistema | Sistema de administración y moderación del chat                                              | El sistema debe permanecer accesible y funcional para los administradores en todo momento, incluso durante picos de actividad       | Tiempo promedio de inactividad del sistema por día    |
+| Seguridad      | ESCA-02 | Sistema de administración y moderación del chat                         | Administradores      | Intentos de acceso no autorizado, ingreso de solicitudes de moderación, tráfico de red malicioso                                | Sistema de administración y moderación del chat, servidores de aplicaciones                  | El sistema debe proteger los datos confidenciales y garantizar que solo los usuarios autorizados tengan acceso solo a sus funciones | Número de intentos de acceso no autorizado bloqueados |
+| Usabilidad     | ESCA-03 | Interfaz de usuario del sistema de administración y moderación del chat | Administradores      | Interacción de los administradores y moderadores con la interfaz de usuario para realizar tareas de moderación                  | Interfaz de usuario del sistema de administración y moderación del chat                      | El sistema debe proporcionar una interfaz intuitiva y fácil de usar que permita al administrador ser eficiente                      | Encuestas de satisfacción del usuario                 |
+| Mantenibilidad | ESCA-04 | Sistema de administración y moderación del chat.                        | Equipo de desarrollo | Implementación de nuevas características, corrección de errores reportados, actualizaciones de seguridad                        | Código fuente del sistema de administración y moderación del chat, documentación del sistema | El sistema debe ser fácil de mantener y actualizar, que facilite la comprensión y modificación de los desarrolladores               | Número de errores introducidos durante modificaciones |
 
 ## Módulo de Integraciones de Terceros
 
-| Atributo          | Código  | Entorno                    | Fuente               | Estímulo                                                       | Artefacto                           | Respuesta                                           | Medida de Respuesta                                   |
-| ----------------- | ------- | -------------------------- | -------------------- | -------------------------------------------------------------- | ----------------------------------- | --------------------------------------------------- | ----------------------------------------------------- |
-| Rendimiento       | ESCI-01 | Operaciones normales       | Usuarios             | Transferencia de datos                                         | Módulo de Integraciones de Terceros | Sincronización exitosa                              | Tiempo de respuesta menor a 2 segundos                |
-| Seguridad         | ESCI-02 | Transferencia de datos     | Usuarios             | Intercambio de datos entre la aplicacion y un servicio externo | Módulo de Integraciones de Terceros | Los datos se intercambian de forma segura           | Menos de 1 caso de filtracion de datos en un año      |
-| Interoperabilidad | ESCI-03 | Operaciones normales       | Usuarios             | Sincronizacion de información                                  | Módulo de Integraciones de Terceros | Sincronización exitosa de informacion               | Mas del 99% de informacion sincronizada correctamente |
-| Mantenibilidad    | ESCI-04 | Mantenimiento de servicios | Equipo de desarrollo | Cambios en permsios de los servicios externos                  | Módulo de Integraciones de Terceros | Cambios realizados y testeados                      | Tiempo de demora del mantemiento menor a 3 horas      |
-| Seguridad         | ESCI-05 | Inicios de sesion          | Usuarios             | Inicio de sesion mediante SSO                                  | Módulo de Integraciones de Terceros | Inicio de sesion exitoso en los distintos servicios | Menos de un intento de inicio de sesiòn ilícito       |
-| Usabilidad        | ESCI-06 | Operaciones normales       | Usuarios             | Interacción con los servicios externos                         | Módulo de Integraciones de Terceros | Interfaces intuitivas y alineadas a la aplicación   | Satisfaccion de usuario mayor al 90%                  |
+| Atributo          | Código  | Entorno                     | Fuente               | Estímulo                                                       | Artefacto                           | Respuesta                                           | Medida de Respuesta                                   |
+| ----------------- | ------- | --------------------------- | -------------------- | -------------------------------------------------------------- | ----------------------------------- | --------------------------------------------------- | ----------------------------------------------------- |
+| Rendimiento       | ESCI-01 | Operaciones normales        | Usuarios             | Transferencia de datos                                         | Módulo de Integraciones de Terceros | Sincronización exitosa                              | Tiempo de respuesta menor a 2 segundos                |
+| Seguridad         | ESCI-02 | Transferencia de datos      | Usuarios             | Intercambio de datos entre la aplicacion y un servicio externo | Módulo de Integraciones de Terceros | Los datos se intercambian de forma segura           | Menos de 1 caso de filtracion de datos en un año      |
+| Interoperabilidad | ESCI-03 | Operaciones normales        | Usuarios             | Sincronizacion de información                                  | Módulo de Integraciones de Terceros | Sincronización exitosa de informacion               | Mas del 99% de informacion sincronizada correctamente |
+| Mantenibilidad    | ESCI-04 | Mantenimiento de servicios  | Equipo de desarrollo | Cambios en permsios de los servicios externos                  | Módulo de Integraciones de Terceros | Cambios realizados y testeados                      | Tiempo de demora del mantemiento menor a 3 horas      |
+| Seguridad         | ESCI-05 | Inicios de sesion           | Usuarios             | Inicio de sesion mediante SSO                                  | Módulo de Integraciones de Terceros | Inicio de sesion exitoso en los distintos servicios | Menos de un intento de inicio de sesiòn ilícito       |
+| Usabilidad        | ESCI-06 | Operaciones normales        | Usuarios             | Interacción con los servicios externos                         | Módulo de Integraciones de Terceros | Interfaces intuitivas y alineadas a la aplicación   | Satisfaccion de usuario mayor al 90%                  |
+| Testeabilidad     | ESCI-07 | Desarrollo de la aplicación | Equipo de desarrollo | Verificación de la integración con los servicios externos      | Módulo de Integraciones de Terceros | Pruebas fáciles y rápidas para la integración       | Número de pruebas exitosas mayor a 90%                |
 
 [Regresar al índice](../../README.md)
