prototps for uci

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -86,11 +86,11 @@
 
 ### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
 
-**Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.     
-**Actores:** Usuarios (alumnos, profesores, personal administrativo).      
-**Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.      
-**Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.       
-**Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.    
+**Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.  
+**Actores:** Usuarios (alumnos, profesores, personal administrativo).  
+**Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.  
+**Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.  
+**Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.
 
 ### **UCG5-Verificación de correo electrónico:**
 
@@ -123,7 +123,7 @@
 **Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores bloqueen a usuarios que están infringiendo las reglas del chat de manera persistente o grave.
 **Actores:** Administrador del sistema
 **Precondiciones:** El moderador ha iniciado sesión en el panel de administración. / El usuario objetivo ha sido identificado y se ha determinado que necesita ser bloqueado.
-**Postcondiciones:**  El usuario seleccionado ha sido bloqueado del chat y se le ha denegado el acceso. / El usuario bloqueado recibe una notificación sobre su bloqueo.
+**Postcondiciones:** El usuario seleccionado ha sido bloqueado del chat y se le ha denegado el acceso. / El usuario bloqueado recibe una notificación sobre su bloqueo.
 **Activador:** El moderador determina que un usuario está violando las reglas del chat de manera reiterada y decide bloquearlo.
 
 ### **UCA4-Herramientas para moderación de suspensión temporal de usuarios:**
@@ -138,6 +138,8 @@
 
 ### **UCI1-Integración con Plataformas LMS:**
 
+![UCI1](../../PNGs/Prototipos/UCI/uci1.jpeg)
+
 **Descripción:** La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.
 **Actores:** Sistema y usuarios.
 **Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion realizada con el sistema externo.
@@ -145,6 +147,8 @@
 **Activador:** Un usuario decide consultar contenidos educativos del LMS.
 
 ### **UCI2-Integración con Google Calendar:**
+
+![UCI2](../../PNGs/Prototipos/UCI/uci2.jpeg)
 
 **Descripción:** La página web se integra con Google Calendar para sincronizar eventos del usuario.  
 **Actores:** Sistema y usuarios.  
@@ -154,6 +158,8 @@
 
 ### **UCI3-Integración con Herramientas de Videoconferencia:**
 
+![UCI3](../../PNGs/Prototipos/UCI/uci3.jpeg)
+
 **Descripción:** La página web se integra con las herramientas de videoconferencia que utilize la universidad para facilitar las reuniones.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion con la herramienta de videoconferencia.  
@@ -161,6 +167,8 @@
 **Activador:** Un usuario decide iniciar o unirse a una reunión o desde la página web.
 
 ### **UCI4-Integración con Servicios de Almacenaje en la Nube:**
+
+![UCI4](../../PNGs/Prototipos/UCI/uci4.jpeg)
 
 **Descripción:** La página web se integra con servicios de almacenaiento en la nube para acceder y compartir archivos dentro de la página web.  
 **Actores:** Sistema y usuarios.  
@@ -170,6 +178,8 @@
 
 ### **UCI5-Integración con Servicios de la Universidad:**
 
+![UCI5](../../PNGs/Prototipos/UCI/uci5.jpeg)
+
 **Descripción:** La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
 **Actores:** Sistema, usuarios y representante del sistema externo.  
 **Precondiciones:** Haber accedido a la página web / Tener acceso a internet / Integracion con los servicios de la universidad.  
@@ -177,6 +187,8 @@
 **Activador:** Un usuario decide visualizar sus notas o avisos de la universidad dentro de la página web.
 
 ### **UCI6-Uso de Single-Sign-On(SSO):**
+
+![UCI6](../../PNGs/Prototipos/UCI/uci6.png)
 
 **Descripción:** La página web admite el SSO con servicios externos para facilitar el acceso de los usuarios.  
 **Actores:** Sistema y usuarios.  
