addded protops for ucg

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -62,6 +62,8 @@
 
 ### **UCG1-Registro e inicio de sesión con roles definidos:**
 
+![UCG1](../../PNGs/Prototipos/UCG/ucg1.jpeg)
+
 **Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** Una cuenta de usuario previamente registrada, la aplicación debe estar conectada a un servicio de autenticación y base de datos.  
@@ -69,6 +71,8 @@
 **Activador:** El usuario selecciona la opción de registro en la pantalla de inicio.
 
 ### **UCG2-Perfiles de usuario:**
+
+![UCG2](../../PNGs/Prototipos/UCG/ucg2.jpeg)
 
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
@@ -78,6 +82,8 @@
 
 ### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal administrativo):**
 
+![UCG3](../../PNGs/Prototipos/UCG/ucg3.jpeg)
+
 **Descripción:** Proceso mediante el cual se asignan roles específicos a los usuarios y se gestionan los permisos asociados a cada rol.  
 **Actores:** Administradores, Usuarios.  
 **Precondiciones:** Administradores, Usuarios. / El usuario debe estar registrado y autenticado.  
@@ -86,6 +92,8 @@
 
 ### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
 
+![UCG4](../../PNGs/Prototipos/UCG/ucg4.jpeg)
+
 **Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
 **Precondiciones:** La aplicación debe tener un sistema de manejo de sesiones.  
@@ -93,6 +101,8 @@
 **Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.
 
 ### **UCG5-Verificación de correo electrónico:**
+
+![UCG5](../../PNGs/Prototipos/UCG/ucg5.jpeg)
 
 **Descripción:** Proceso mediante el cual el usuario verifica su dirección de correo electrónico para activar su cuenta.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
