Update 2.1 Requerimentos Funcionales.md

--- a/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.1 Requerimentos Funcionales.md
@@ -4,6 +4,8 @@
 
 ### **UCC1-Mensajería one-to-one:**
 
+![UCC1](../../PNGs/Prototipo/UCC/ucc1_2_4_5_6.png)
+
 **Descripción:** Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet  
@@ -11,6 +13,8 @@
 **Activador:** Un usuario quiere enviar un mensaje directo.
 
 ### **UCC2-Mensajería de grupo:**
+
+![UCC2](../../PNGs/Prototipo/UCC/ucc1_2_4_5_6.png)
 
 **Descripción:** Los usuarios podrán crear y unirse a grupos de chat, ya sean por curso, grupo de trabajo, etc.  
 **Actores:** Sistema y usuarios.  
@@ -20,6 +24,8 @@
 
 ### **UCC3-Anuncios y notificaciones:**
 
+![UCC3](../../PNGs/Prototipo/UCC/ucc3.png)
+
 **Descripción:** Los profesores y el personal administrativo podrán enviar mensajes importantes a los grupos de estudiantes o a toda la institución.  
 **Actores:** Sistema, profesores y personal administrativo.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Iniciar sesión como profesor o personal administrativo.  
@@ -27,6 +33,8 @@
 **Activador:** El profesor o personal administrativo decide enviar un anuncio o notificación.
 
 ### **UCC4-Compartir archivos:**
+
+![UCC1](../../PNGs/Prototipo/UCC/ucc1_2_4_5_6.png)
 
 **Descripción:** Todos los usuarios podrán compartir archivos multimedia, documentos, presentaciones, etc., dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
@@ -36,6 +44,8 @@
 
 ### **UCC5-Borrado de mensajes:**
 
+![UCC1](../../PNGs/Prototipo/UCC/ucc1_2_4_5_6.png)
+
 **Descripción:** Todos los usuarios podrán eliminar los mensajes posterior a su envío, pero no después de pasadas 24 horas de su envío, esto dentro de los chats individuales o de grupo.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.  
@@ -44,6 +54,8 @@
 
 ### **UCC6-Indicadores de Lectura:**
 
+![UCC1](../../PNGs/Prototipo/UCC/ucc1_2_4_5_6.png)
+
 **Descripción:** Todos los usuarios podrán ver el estado de su mensaje, primero si es que ha sido enviado, posterior si es que este ha sido recibido y por último, si este ha sido leido por el o los destinatarios.  
 **Actores:** Sistema y usuarios.  
 **Precondiciones:** Haber accedido a la página web. / Tener acceso a internet. / Haber enviado un mensaje.  
@@ -51,6 +63,8 @@
 **Activador:** El usuario decide corroborar en qué estado se encuentra el mensaje una vez fue enviado.
 
 ### **UCC7-Búsqueda de mensajes:**
+
+![UCC7](../../PNGs/Prototipo/UCC/ucc7.png)
 
 **Descripción:** Todos los usuarios podrán buscar uno o varios mensajes que contengan una palabra clave. Por ejemplo, podrán buscar todos los mensajes que contengan la palabra "tarea".  
 **Actores:** Sistema y usuarios.  
@@ -62,7 +76,9 @@
 
 ### **UCG1-Registro e inicio de sesión con roles definidos:**
 
-![UCG1](../../PNGs/Prototipos/UCG/ucg1.jpeg)
+![UCG1](../../PNGs/Prototipo/UCG/ucg1.png)
+![UCG1](../../PNGs/Prototipo/UCG/ucg1.2.png)
+![UCG1](../../PNGs/Prototipo/UCG/ucg1.3.png)
 
 **Descripción:** La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
@@ -72,7 +88,7 @@
 
 ### **UCG2-Perfiles de usuario:**
 
-![UCG2](../../PNGs/Prototipo/UCG/ucg2.jpeg)
+![UCG2](../../PNGs/Prototipo/UCG/ucg2.png)
 
 **Descripción:** Cada usuario tendrá un perfil con información básica como nombre, foto de perfil, rol en la institución, etc.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
@@ -80,19 +96,9 @@
 **Postcondiciones:** La información del perfil del usuario se actualiza en la base de datos. / Los cambios en el perfil se reflejan en la interfaz de usuario.  
 **Activador:** El usuario selecciona la opción de editar perfil desde el panel de usuario.
 
-### **UCG3-Asignación y gestión de roles y permisos (alumnos, profesores, personal administrativo):**
+### **UCG3-Recuperación de contraseñas y manejo de sesiones:**
 
-![UCG3](../../PNGs/Prototipo/UCG/ucg3.jpeg)
-
-**Descripción:** Proceso mediante el cual se asignan roles específicos a los usuarios y se gestionan los permisos asociados a cada rol.  
-**Actores:** Administradores, Usuarios.  
-**Precondiciones:** Administradores, Usuarios. / El usuario debe estar registrado y autenticado.  
-**Postcondiciones:** Los usuarios tienen asignados roles específicos con permisos adecuados. / Los cambios en los roles y permisos se guardan en la base de datos.  
-**Activador:** El administrador accede al panel de administración y selecciona la opción de gestión de roles.
-
-### **UCG4-Recuperación de contraseñas y manejo de sesiones:**
-
-![UCG4](../../PNGs/Prototipo/UCG/ucg4.jpeg)
+![UCG3](../../PNGs/Prototipo/UCG/ucg4.png)
 
 **Descripción:** Proceso que permite a los usuarios recuperar su contraseña en caso de olvido.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
@@ -100,9 +106,9 @@
 **Postcondiciones:** El usuario recibe un enlace para restablecer su contraseña. / La nueva contraseña se actualiza en la base de datos y el usuario puede iniciar sesión nuevamente.  
 **Activador:** El usuario selecciona la opción de "Olvidé mi contraseña" en la pantalla de inicio de sesión.
 
-### **UCG5-Verificación de correo electrónico:**
+### **UCG4-Verificación de correo electrónico:**
 
-![UCG5](../../PNGs/Prototipo/UCG/ucg5.jpeg)
+![UCG4](../../PNGs/Prototipo/UCG/ucg5.png)
 
 **Descripción:** Proceso mediante el cual el usuario verifica su dirección de correo electrónico para activar su cuenta.  
 **Actores:** Usuarios (alumnos, profesores, personal administrativo).  
@@ -114,6 +120,8 @@
 
 ### **UCA1-Panel de administración para supervisar la actividad del chat:**
 
+![UCA1](../../PNGs/Prototipo/UCA/uca1.png)
+
 **Descripción:** Este caso de uso describe la funcionalidad del panel de administración que permite a los administradores supervisar la actividad del chat en la aplicación.
 **Actores:** Administrador del sistema
 **Precondiciones:** El administrador ha iniciado sesión en el panel de administración. / La aplicación está en funcionamiento y los usuarios están activos en el chat.
@@ -121,6 +129,8 @@
 **Activador:** El administrador accede al panel de administración para monitorear la actividad del chat.
 
 ### **UCA2-Herramientas para moderación en eliminación de mensajes:**
+
+![UCA2](../../PNGs/Prototipo/UCA/uca2.png)
 
 **Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores eliminen mensajes inapropiados o no deseados del chat.
 **Actores:** Administrador del sistema
@@ -130,6 +140,8 @@
 
 ### **UCA3-Herramientas para moderación para bloqueo de usuarios:**
 
+![UCA3](../../PNGs/Prototipo/UCA/uca3_4.png)
+
 **Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores bloqueen a usuarios que están infringiendo las reglas del chat de manera persistente o grave.
 **Actores:** Administrador del sistema
 **Precondiciones:** El moderador ha iniciado sesión en el panel de administración. / El usuario objetivo ha sido identificado y se ha determinado que necesita ser bloqueado.
@@ -137,6 +149,8 @@
 **Activador:** El moderador determina que un usuario está violando las reglas del chat de manera reiterada y decide bloquearlo.
 
 ### **UCA4-Herramientas para moderación de suspensión temporal de usuarios:**
+
+![UCA4](../../PNGs/Prototipo/UCA/uca3_4.png)
 
 **Descripción:** Este caso de uso describe las herramientas disponibles para que los moderadores suspendan temporalmente a usuarios que están infringiendo las reglas del chat de manera temporal o moderada.
 **Actores:** Administrador del sistema
@@ -188,7 +202,7 @@
 
 ### **UCI5-Integración con Servicios de la Universidad:**
 
-![UCI5](../../PNGs/Prototipo/UCI/uci5.png)
+![UCI5](../../PNGs/Prototipo/UCI/uci5.jpeg)
 
 **Descripción:** La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.  
 **Actores:** Sistema, usuarios y representante del sistema externo.  
