--- a/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
@@ -4,7 +4,11 @@ Se debe asegurar la alta disponibilidad en la plataforma debido a su naturaleza,
 
 **Medida de respuesta esperada**
 - Disponibilidad del sistema: 99.9%
-- Downtime anual: 8.8 horas
+- Downtime anual: 8.8 horas  
+
+__Escenario__:  
+UCC1-Mensajería one-to-one: Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
+UCG1-Registro e inicio de sesión con roles definidos: La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.
 
 ## Detección de Fallas
 - *Monitoreo* constante de la página web para identifación de potenciales fallos antes de originar la inactividad del sistema.
