--- a/Partes del Indice/4. Tacticas/4.2 Mantenibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.2 Mantenibilidad.md
@@ -1,6 +1,16 @@
 # 4.2 Mantenibilidad
 
-Al ser una página dedicada a la comunicación entre estudiantes universitarios, según la institución académica se requieren de diferentes cualidades las cuales deberán ser implementadas. Ante esto, resulta vital que se pueda garantizar la mantenibilidad de esta página web. Algunas tácticas elegidas para lograr esta finalidad son las siguientes.
+Al ser una página dedicada a la comunicación entre estudiantes universitarios, según la institución académica se requieren de diferentes cualidades las cuales deberán ser implementadas. Ante esto, resulta vital que se pueda garantizar la mantenibilidad de esta página web. 
+
+__Escenarios__:
+
+UCI1-Integración con Plataformas LMS: La página web puede integrarse con sistemas de gestión educativa que utilice la universidad para visualizar cursos o anuncios de este.
+
+UCI5-Integración con Servicios de la Universidad: La página web se integra con los servicios propios que brinda la misma universidad, tales como calificaciones, anuncios de la propia universidad.
+
+
+Algunas tácticas elegidas para lograr esta finalidad son las siguientes.
+
 - *Reducción  del tamaño del módulo*, si bien ya se consideró el trabajo de forma modular, es necesario que esto se aplique a todo nivel en cada parte del proyecto. Esto facilitará las modificaciones dentro del proyecto según los requerimientos que tengan las diferentes universidades.
 - *Incrementar la cohesión*, se deben implementar módulos distintos según las funcionalidades requeridas, esto con la finalidad de reducir el impacto en otras responsabilidades asignadas a otros módulos. 
 - *Disminuir el acoplamiento*, el uso del refactoring resulta crucial al momento de optimizar, por ejemplo, el tener dos módulos que utilizan la misma función pero ambos las tienen implementadas.
