--- a/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
+++ b/Partes del Indice/4. Tacticas/4.1 Disponibilidad.md
@@ -6,7 +6,7 @@ Se debe asegurar la alta disponibilidad en la plataforma debido a su naturaleza,
 - Disponibilidad del sistema: 99.9%
 - Downtime anual: 8.8 horas  
 
-__Escenario__:  
+__Escenarios__:  
 UCC1-Mensajería one-to-one: Los usuarios podrán enviar mensajes directos a otros usuarios, independientemente de su rol.  
 UCG1-Registro e inicio de sesión con roles definidos: La página web debe permitir el registro e inicio de sesión de usuarios con roles específicos: profesor, alumno y personal administrativo, cada rol tendrá diferentes permisos y funcionalidades.
 
