Update 3.5 Eleccion de Tecnologia.md

--- a/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.5 Eleccion de Tecnologia.md
+++ b/Partes del Indice/3. Decisiones a Nivel de Arquitectura/3.5 Eleccion de Tecnologia.md
@@ -3,7 +3,7 @@
 
 - **PostgreSQL:** Se escogió PostgreSQL como la base de datos de la aplicación, pues se requeria de una base de datos que mantenga la integridad de la informacion de la universidad que se transfiere. Se tuvieron otras propuestas como MongoDB, sin embargo, debido a su naturaleza no relacional, las consultas que se realizan serián más complejas.
 
-- **Node.js:** Se decidio escoger Node.js como plataforma del backend debido a la experiencia del equipo de desarrollo con esta plataforma, ademas de que utiliza el modelo I/O no bloqueante, que permite multiples conexiones a la vez, lo que es muy útil para una aplicación como esta. Respecto a otras plataformas como Pythin o Ruby, se descartaron debido a su baja eficiencia comparada con la de Node.js.
+- **Node.js:** Se decidio escoger Node.js como plataforma del backend debido a la experiencia del equipo de desarrollo con esta plataforma, ademas de que utiliza el modelo I/O no bloqueante, que permite multiples conexiones a la vez, lo que es muy útil para una aplicación como esta. Respecto a otras plataformas como Python o Ruby, se descartaron debido a su baja eficiencia comparada con la de Node.js.
 
 - **Express.js:** Se escogió Express.js debido a su relacion con Node.js en su implementación, ademas de la simplicidad, flexibilidad y rendimiento que este tiene. 
 
