--- a/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
+++ b/Partes del Indice/2. Requerimientos del Sistema/2.2 Requerimentos de Atributos.md
@@ -13,12 +13,10 @@
 
 | Atributo        | Código  | Entorno         | Fuente          | Estímulo        | Artefacto                             | Respuesta       | Medida de Respuesta |
 | --------------- | ------- | --------------- | --------------- | --------------- | ------------------------------------- | --------------- | ------------------- |
-| Registro e inicio de sesión con roles definidos | UCG-01  | Operaciones normales | Usuarios | Selección de opción de registro en pantalla de inicio | Página de Registro | Cuenta creada, sesión iniciada, datos almacenados de forma segura | Acceso a la aplicación con cuenta creada     |
-| Perfiles de usuario | UCG-02 | Operaciones normales | Usuarios | Selección de opción de editar perfil desde panel de usuario | Perfil de Usuario | Información de perfil actualizada en la base de datos e interfaz | Cambios reflejados inmediatamente     |
-| Asignación y gestión de roles y permisos | UCG-03 | Operación de datos | Administradores, Usuarios | Acceso al panel de administración y selección de gestión de roles | Sistema de Roles | Roles específicos asignados y permisos guardados en la base de datos | Roles y permisos actualizados correctamente     |
-| Recuperación de contraseñas y manejo de sesiones | UCG-04 | Inicios de sesión | Usuarios | Selección de "Olvidé mi contraseña" en pantalla de inicio de sesión | Sistema de Recuperación de Contraseñas | Enlace para restablecer contraseña, datos actualizados en base de datos | Contraseña restablecida, inicio de sesión     |
-| Verificación de correo electrónico | UCG-05 | Inicios de sesión | Usuarios | Recepción de correo con enlace de verificación tras registro | Sistema de Verificación de Correo | Correo verificado, cuenta activada, estado actualizado en base de datos | Cuenta activada tras verificación     |
-| Panel de usuario para configuraciones personales | UCG-06 | Mantenimiento de servicios | Usuarios | Acceso al panel de configuraciones personales desde perfil | Panel de Configuraciones | Preferencias guardadas en base de datos, reflejadas en la experiencia de usuario | Cambios aplicados y afectando experiencia     |
+| Disponibilidad | ESCG-01  | Página web con servicio de autenticación y base de datos. | Equipo de desarrollo | Usuario selecciona opción de registro. | Página de Registro | El usuario se registra con roles definidos. | Usuario puede iniciar sesión con su cuenta.     |
+| Usabilidad | ESCG-02 | Aplicación con interfaz de usuario para perfiles. | Usuarios | Usuario edita su perfil. | Perfil de Usuario | Información de perfil actualizada. | Cambios reflejados en la interfaz de usuario.     |
+| Escalabilidad | ESCG-03 | Sistema de manejo de sesiones en aplicación web. | Administradores, Usuarios | Usuario selecciona 'Olvidé mi contraseña'. | Pantalla de recuperación de contraseña. | Contraseña recuperada. | Usuario puede iniciar sesión con nueva contraseña.     |
+| Seguridad | ESCG-04 | Sistema de registro y base de datos para verificación. | Equipo de desarrollo | Usuario recibe correo de verificación. | Correo electrónico de verificación. | Correo electrónico verificado. | Cuenta activada y verificada.     |
 
 ## Módulo de Administración y Moderación
 
